# ArtistManagementSystem-Django_Vue

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/album/: decorators.py  models.py  serializers.py  urls.py  views.py
backend/album/migrations/: 0001_initial.py  0002_initial.py  0003_remove_album_totalsongs_album_is_deleted_and_more.py  0004_alter_album_artist.py  0005_album_is_disabled.py
backend/core/: settings.py  urls.py
backend/customUser/: decorators.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/customUser/api/: urls.py  views.py
backend/customUser/migrations/: 0001_initial.py  0002_alter_users_fname.py  0003_alter_users_password.py  0004_alter_users_password.py  0005_users_is_admin.py  0006_alter_users_managers.py  0007_alter_users_managers_rename_is_admin_users_is_staff.py  0008_users_is_active.py  0009_alter_users_is_active.py  0010_rename_link_users_links.py
backend/music/: decorators.py  models.py  urls.py  views.py
backend/music/migrations/: 0001_initial.py  0002_alter_music_artist.py  0003_alter_music_album_alter_music_artist.py  0004_alter_music_album_alter_music_artist.py  0005_alter_music_album.py  0006_music_modified_by.py  0007_alter_music_album.py  0008_alter_music_album.py  0009_alter_music_album_alter_music_artist.py  0010_music_is_disabled.py  0011_alter_music_artist.py
backend/song/: models.py  urls.py  views.py
backend/song/migrations/: 0001_initial.py  0002_song_is_hidden.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  Dashboard.vue  PageLayout.vue  index.js  main.js
(+22 files in other folders)
